Fixed z-index issue

--- a/wp-content/themes/2023/styles/app.scss
+++ b/wp-content/themes/2023/styles/app.scss
@@ -179,7 +179,7 @@ a {
     position: fixed;
     background: $white;
     color: $dark;
-    z-index: 1;
+    z-index: 15;
     .material-symbols-outlined {
         position: absolute;
         top: 2rem;
